[gd_scene load_steps=4 format=3 uid="uid://cmh84x2mocib0"]

[ext_resource type="Script" path="res://player/projectile.gd" id="1_5ydmv"]
[ext_resource type="Texture2D" uid="uid://bquvixll4bkn2" path="res://assets/Projectile Single.png" id="2_viq7j"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_7amgo"]
radius = 9.0
height = 56.0

[node name="Projectile" type="Area2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource("1_5ydmv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -1)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_7amgo")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(0, -1)
texture = ExtResource("2_viq7j")

[node name="SelfDestructTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="SelfDestructTimer" to="." method="_on_self_destruct_timer_timeout"]
